# voj

./: .gitignore  README.md  docker-compose.yml  env.local.example  env.production.example  package.json  pyproject.toml  requirements.txt  sst.config.ts  tailwind.config.ts  tsconfig.json  vercel.json
.cursor/: environment.json
.lambda-build-host/: requirements.txt
app/: layout.tsx
aws-policies/: additional-permissions.json  cloudfront-keygroup-policy.json  lambda-api-policy.json  lambda-api-trust-policy.json  lambda-encoding-policy.json  voj-dev-policy.json
backend/: Dockerfile
docs/: checklist.md  deploy-backend.md  deploy-frontend.md  deployment-automation.md  design.md  monitoring.md  prd.md  rollout-plan.md  s3-setup.md  security-checklist.md  smoke-test.md  verify-streaming.md
frontend/: .env.production.example  next.config.js  package-lock.json  package.json  sst-env.d.ts  tailwind.config.ts  tsconfig.json
scripts/: add-cloudfront-permissions.sh  attach-lambda-policies.sh  build-lambda-package-host.sh  build-lambda-package.sh  cdk-bootstrap.sh  cdk-deploy.sh  cf-invalidate.sh  check-prod-health.sh  check-streaming.sh  create-cloudfront-keygroup.sh  create-cloudwatch-alarms.sh  create-custom-policy.sh  create-encoding-role.sh  create-iam-group.sh  create-lambda-roles.sh  create-local-tables.py  deploy-backend-lambda.sh  fix-cloudfront-permissions.sh  fix-policy-quota.sh  setup-aws-permissions.sh  setup-local.sh  start-local.sh  stop-local.sh  update-cloudfront-policy.sh  update-dynamodb-permissions.sh  update-policy.sh
tasks/: prd-audiobook-mvp-v2.md  tasks-prd-audiobook-mvp-v2-deploy.md  tasks-prd-audiobook-mvp-v2.md  tasks-prd.md
tests/: test_audio_delete_chapter.py  test_audio_end_to_end_flow.py  test_audio_list_chapters.py  test_audio_reorder_chapter.py  test_audio_streaming.py  test_audio_streaming_signed_url.py  test_audio_upload_api.py  test_audio_validation.py  test_auth_deps.py  test_auth_endpoints.py  test_auth_endpoints_simple.py  test_auth_jwt.py  test_auth_scopes.py  test_auth_simple.py  test_auto_encoding_trigger.py  test_books_end_to_end.py  test_books_endpoint_delete.py  test_books_endpoint_get_one.py  test_books_endpoint_list.py  test_books_endpoint_post.py  test_books_endpoint_put.py  test_books_service.py  test_encoding_file_management.py  test_encoding_queue.py  test_environment_config.py  test_environment_detection.py  test_ffmpeg_encoding.py  test_ffprobe_utils.py  (+6 more)
(+136 files in other folders)
